# vtt-challenge

./: README.md  innovations_analysis.py  pyproject.toml
docs/: SOLUTION.md
notebooks/: candidates_eda.ipynb
pipeline/: README.md  compose.yml  package.json
pipeline/agents/: innovation-creator-agent.ts
pipeline/mcp/: innovation_entity_server.py
pipeline/mcp/models/: schemas.py
pipeline/scripts/: ambiguity_analysis.py  ingest_entities.py  streamlit_app.py
