[project]
name = "vtt-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastmcp>=2.5.2",
    "neo4j>=5.28.1",
    "numpy>=2.2.6",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
